user-box: fix persistent -1 z-index where couldn't click anything

--- a/resources/scss/user.scss
+++ b/resources/scss/user.scss
@@ -3,14 +3,15 @@
   max-height: 0; // prob use scale-y + move instead remember gpu-accel
   // overflow-y: hidden;
   // overflow-y: scroll; // suddenly causes weird padding beneath...
-  opacity: 0.1;
-  z-index: -1;
+  opacity: 0.0;
+  // z-index: -1;
   backdrop-filter: blur(0.3rem);
-  transition: max-height 0.7s ease, margin 0.7s ease, opacity 0.8s ease;
+  transition: max-height 0.7s ease, margin 0.7s ease, opacity 0.7s ease;
 }
 .user-section-wrapper.active {
   max-height: 80vh; // so how best control how much space needed from js side? obviously breaks on eg landscape...
   opacity: 1.0;
+  z-index: 10;
   margin-top: var(--space-lg);
   transition: max-height 0.6s ease, margin 0.6s ease, opacity 0.8s ease;
   box-shadow: 3px 3px 15px 10px var(--user-box-shadow) inset;
